# diffuse

./: .chobi.json  .diffuse.json  .gitignore  .swift-format  AGENTS.md  AST_APPLICATION_PLAN.md  AgentContextBuilderTests.swift  AgentContextQueryServiceTests.swift  ArchitectureTests.swift  MCPRequestRouterTests.swift  README.md
.github/workflows/: release-build.yml  run-tests.yml  swift-format.yml
Chobi/: ChobiApp.swift  Localizable.xcstrings
Chobi.xcodeproj/: project.pbxproj
Chobi/Core/: AgentContextBuilder.swift  AgentContextModels.swift  AnalysisEngine.swift  AnalysisProfile.swift  AnalysisProfileStudio.swift  ImpactGraphModels.swift  Models.swift
Chobi/Services/: AppLogger.swift  (+6 more)
Diffuse/: DiffuseApp.swift  Localizable.xcstrings
Diffuse.xcodeproj/: project.pbxproj
Tests/: AgentContextBuilderTests.swift  AgentContextQueryServiceTests.swift  ArchitectureTests.swift  CIStressTest.swift  LargeChangeProcessingTests.swift  MCPRequestRouterTests.swift  ProcessDeadlockTests.swift
chobi-core/: Cargo.toml
diffuse/: AnalysisEngine.swift  AnalysisPanels.swift  AnalysisProfile.swift  AppState.swift  ContentView.swift  DesignSystem.swift  DiffViewer.swift  Localizable.xcstrings  Models.swift  Services.swift  SettingsSheet.swift  diffuseApp.swift
diffuse-core/: Cargo.toml
diffuse-core/src/: analyzer.rs  main.rs
diffuse.xcodeproj/: project.pbxproj
docs/: impact_graph_iteration_3_plan.md  impact_graph_next_iteration_plan.md  macos_architecture_guide.md
scripts/: build.sh  format.sh  generate_app_icon.sh  lint.sh  run-tests.sh  setup-git-hooks.sh
(+60 files in other folders)
